--- a/source/tools/CMakeLists.txt
+++ b/source/tools/CMakeLists.txt
@@ -1,89 +1,101 @@
 
 ##########################################################################################
 #
-#        timem tool
+#        timemory tool (executables)
 #
 ##########################################################################################
-
-add_executable(timemory-avail
-    ${CMAKE_CURRENT_LIST_DIR}/available.cpp
-    ${CMAKE_CURRENT_LIST_DIR}/available.hpp)
-target_include_directories(timemory-avail PRIVATE ${CMAKE_CURRENT_LIST_DIR})
-target_link_libraries(timemory-avail PRIVATE timemory-extensions timemory-headers)
-set_target_properties(timemory-avail PROPERTIES INSTALL_RPATH_USE_LINK_PATH ON)
-install(TARGETS timemory-avail DESTINATION bin)
-
-# disabled
-if(NOT TIMEMORY_BUILD_TOOLS)
-    return()
-endif()
 
 # Windows not supported
 if(WIN32)
     return()
 endif()
 
-add_option(TIMEMORY_BUILD_TIMEM "Build the timem tool" ON)
+set(_DYNINST OFF)
+if(TIMEMORY_BUILD_TOOLS AND TIMEMORY_USE_DYNINST)
+    set(_DYNINST ON)
+endif()
+
+set(_MPIP ${TIMEMORY_USE_MPI})
+if(_MPIP AND NOT TARGET timemory-cxx-shared)
+    set(_MPIP OFF)
+endif()
+
+add_option(TIMEMORY_BUILD_AVAIL "Build the timemory-avail tool" ${TIMEMORY_BUILD_TOOLS})
+add_option(TIMEMORY_BUILD_TIMEM "Build the timem tool" ${TIMEMORY_BUILD_TOOLS})
+add_option(TIMEMORY_BUILD_KOKKOS_TOOLS "Build the kokkos-tools libraries" ${TIMEMORY_BUILD_TOOLS})
+add_option(TIMEMORY_BUILD_DYNINST_TOOLS "Build the timemory-run dynamic instrumentation tool" ${_DYNINST})
+
 if(TIMEMORY_USE_MPI)
-    add_option(TIMEMORY_BUILD_MPIP "Build the mpiP library" ON)
+    add_option(TIMEMORY_BUILD_MPIP "Build the mpiP library" ${_MPIP})
 endif()
 
-# pmpi tool
-if(TARGET timemory-cxx-shared AND TIMEMORY_USE_MPI)
-    add_subdirectory(mpip)
-endif()
-
-if(NOT TIMEMORY_BUILD_TIMEM)
-    return()
+if(TIMEMORY_BUILD_MPIP AND NOT TARGET timemory-cxx-shared)
+    message(AUTHOR_WARNING "Missing CMake target 'timemory-cxx-shared' for timemory-mpip. Disabling TIMEMORY_BUILD_MPIP...")
+    set(TIMEMORY_BUILD_MPIP OFF PARENT_SCOPE)
 endif()
 
 #----------------------------------------------------------------------------------------#
-# Embed the link path into the executable
+# Build and install timemory-avail tool
 #
-add_library(timem-libexplain INTERFACE)
+if(TIMEMORY_BUILD_AVAIL)
+    add_executable(timemory-avail
+        ${CMAKE_CURRENT_LIST_DIR}/available.cpp
+        ${CMAKE_CURRENT_LIST_DIR}/available.hpp)
+    target_include_directories(timemory-avail PRIVATE ${CMAKE_CURRENT_LIST_DIR})
+    target_link_libraries(timemory-avail PRIVATE timemory-extensions timemory-headers)
+    set_target_properties(timemory-avail PROPERTIES INSTALL_RPATH_USE_LINK_PATH ON)
+    install(TARGETS timemory-avail DESTINATION bin)
+endif()
 
-add_option(TIMEMORY_BUILD_TOOLS_LIBEXPECT "Enable using libexpect to diagnose errors" OFF)
-if(TIMEMORY_BUILD_TOOLS_LIBEXPECT)
 
-    find_path(LIBEXPLAIN_INCLUDE_DIR
-        NAMES libexplain/execvp.h
-        PATH_SUFFIXES include)
+#----------------------------------------------------------------------------------------#
+# Build and install timem tool
+#
+if(TIMEMORY_BUILD_TIMEM)
+    add_library(timem-libexplain INTERFACE)
 
-    find_library(LIBEXPLAIN_LIBRARY
-        NAMES explain
-        PATH_SUFFIXES lib lib64 lib32)
+    add_option(TIMEMORY_BUILD_TOOLS_LIBEXPECT "Enable using libexpect to diagnose errors" OFF)
+    if(TIMEMORY_BUILD_TOOLS_LIBEXPECT)
 
-    if(LIBEXPLAIN_INCLUDE_DIR AND LIBEXPLAIN_LIBRARY)
-        target_include_directories(timem-libexplain INTERFACE ${LIBEXPLAIN_INCLUDE_DIR})
-        target_compile_definitions(timem-libexplain INTERFACE TIMEMORY_USE_LIBEXPLAIN)
-        target_link_libraries(timem-libexplain INTERFACE ${LIBEXPLAIN_LIBRARY})
-    else()
-        set(TIMEMORY_BUILD_TOOLS_LIBEXPECT OFF)
+        find_path(LIBEXPLAIN_INCLUDE_DIR
+            NAMES libexplain/execvp.h
+            PATH_SUFFIXES include)
+
+        find_library(LIBEXPLAIN_LIBRARY
+            NAMES explain
+            PATH_SUFFIXES lib lib64 lib32)
+
+        if(LIBEXPLAIN_INCLUDE_DIR AND LIBEXPLAIN_LIBRARY)
+            target_include_directories(timem-libexplain INTERFACE ${LIBEXPLAIN_INCLUDE_DIR})
+            target_compile_definitions(timem-libexplain INTERFACE TIMEMORY_USE_LIBEXPLAIN)
+            target_link_libraries(timem-libexplain INTERFACE ${LIBEXPLAIN_LIBRARY})
+        else()
+            set(TIMEMORY_BUILD_TOOLS_LIBEXPECT OFF)
+        endif()
+
     endif()
 
+    add_executable(timem timem.cpp timem.hpp)
+
+    target_link_libraries(timem PRIVATE
+        timemory-compile-options
+        timemory-arch
+        timemory-vector
+        timemory-headers
+        # timemory-papi
+        timem-libexplain)
+
+    set_target_properties(timem PROPERTIES
+        INSTALL_RPATH_USE_LINK_PATH ON)
+
+    # timem installation
+    install(TARGETS timem DESTINATION bin)
+
 endif()
 
-#----------------------------------------------------------------------------------------#
-# Build, link, and install timem
-#
-add_executable(timem timem.cpp timem.hpp)
-
-target_link_libraries(timem PRIVATE
-    timemory-compile-options
-    timemory-arch
-    timemory-vector
-    timemory-headers
-    # timemory-papi
-    timem-libexplain)
-
-set_target_properties(timem PROPERTIES
-    INSTALL_RPATH_USE_LINK_PATH ON)
-
-# timem installation
-install(TARGETS timem DESTINATION bin)
 
 #----------------------------------------------------------------------------------------#
-# Build, link, and install timemory-run
+# Build and install timemory-run
 #
 if(TIMEMORY_USE_DYNINST)
 
@@ -113,4 +125,19 @@ if(TIMEMORY_USE_DYNINST)
     )
 
     install(TARGETS timemory-run DESTINATION bin)
+endif()
+
+
+#----------------------------------------------------------------------------------------#
+# Build and install timemory-mpip library
+#
+if(TIMEMORY_BUILD_MPIP)
+    add_subdirectory(mpip)
+endif()
+
+#----------------------------------------------------------------------------------------#
+# Build and install timemory-connector libraries for kokkos
+#
+if(TIMEMORY_BUILD_KOKKOS_TOOLS)
+    add_subdirectory(kokkos-connector)
 endif()
