--- a/timemory/__init__.py.in
+++ b/timemory/__init__.py.in
@@ -81,6 +81,7 @@ try:
     from . import plotting
     from . import roofline
     from . import mpi_support
+    from . import mpi_support as mpi
     from . import util
     from . import options
     from . import units
@@ -99,6 +100,7 @@ try:
                'tests',
                'util',
                'ert',
+               'mpi',
                # --------------- classes ---------------#
                'manager',
                'timer',
@@ -115,8 +117,6 @@ try:
                'LINE',
                'FUNC',
                'FILE',
-               'set_max_depth',
-               'get_max_depth',
                'toggle',
                'enable',
                'disable',
@@ -129,6 +129,11 @@ try:
                'set_rusage_self',
                'set_exit_action',
                'timemory_init',
+               'timemory_finalize',
+               'initialize',
+               'finalize',
+               'mpi_init',
+               'mpi_finalize',
                ]
 
     # print("{}".format(sys.argv[:]))
@@ -136,11 +141,14 @@ try:
     while len(args) > 0 and len(args[0]) > 0 and args[0][0] == '-':
         args.pop(0)
     # print("{}".format(args))
+
     if len(args) == 0:
         args.append("python")
-    if os.environ.get("TIMEMORY_LIBRARY_CTOR", True) is None:
+
+    if os.environ.get("TIMEMORY_LIBRARY_CTOR", True):
         timemory_init(args)
-    if os.environ.get("TIMEMORY_LIBRARY_DTOR", True) is None:
+
+    if os.environ.get("TIMEMORY_LIBRARY_DTOR", True):
         atexit.register(timemory_finalize)
 
 except Exception as e:
@@ -148,6 +156,7 @@ except Exception as e:
     traceback.print_exception(exc_type, exc_value, exc_traceback)
 
     from . import mpi_support
+    from . import mpi_support as mpi
     from . import roofline
     from .common import *
 
@@ -157,6 +166,7 @@ except Exception as e:
                # --------------- modules ---------------#
                'mpi_support',
                'roofline',
+               'mpi',
                # --------------- functions -------------#
                'LINE',
                'FUNC',
