OMPT support + Python and MPIP fixes + auto_tuple construct
- lambda changes
- introduce persistent_data in some components

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "external/gotcha"]
 	path = external/gotcha
 	url = https://github.com/jrmadsen/GOTCHA.git
+[submodule "external/llvm-ompt"]
+	path = external/llvm-ompt
+	url = https://github.com/OpenMPToolsInterface/LLVM-openmp.git
