--- a/timemory/__init__.py.in
+++ b/timemory/__init__.py.in
@@ -151,6 +151,10 @@ try:
     if os.environ.get("TIMEMORY_LIBRARY_DTOR", True):
         atexit.register(timemory_finalize)
 
+    settings.python_exe = "{}".format(sys.executable)
+    settings.command_line = args
+
+
 except Exception as e:
     exc_type, exc_value, exc_traceback = sys.exc_info()
     traceback.print_exception(exc_type, exc_value, exc_traceback)
