--- a/source/tools/CMakeLists.txt
+++ b/source/tools/CMakeLists.txt
@@ -10,6 +10,8 @@ if(WIN32)
     return()
 endif()
 
+set(CMAKE_INSTALL_DEFAULT_COMPONENT_NAME tools)
+
 set(_DYNINST OFF)
 if(TIMEMORY_BUILD_TOOLS AND TIMEMORY_USE_DYNINST)
     set(_DYNINST ON)
