--- a/.gitmodules
+++ b/.gitmodules
@@ -15,4 +15,4 @@
 	url = https://github.com/jrmadsen/GOTCHA.git
 [submodule "external/llvm-ompt"]
 	path = external/llvm-ompt
-	url = https://github.com/OpenMPToolsInterface/LLVM-openmp.git
+	url = https://github.com/NERSC/LLVM-openmp.git
