--- a/examples/ex-optional/CMakeLists.txt
+++ b/examples/ex-optional/CMakeLists.txt
@@ -11,6 +11,7 @@ add_executable(ex_optional_on ${sources})
 add_executable(ex_optional_off ${sources})
 
 target_link_libraries(ex_optional_on timemory)
+target_link_libraries(ex_optional_off timemory-compile-options)
 target_compile_definitions(ex_optional_on PRIVATE USE_TIMEMORY)
 
 install(TARGETS ex_optional_on ex_optional_off DESTINATION bin)
