--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,8 @@ matrix:
             - libpapi-dev
             - papi-tools
             - graphviz
+            - libgoogle-perftools-dev
+            - google-perftools
       env:
         - MATRIX_EVAL="CC=$(which gcc-6) && CXX=$(which g++-6) && BUILD_TYPE=MinSizeRel && BUILD_ARGS='--papi --mpi --build-libs static --mpip --python --ompt --kokkos --stats --tools --cxx-standard=14'"
     # GCC 7
@@ -49,6 +51,8 @@ matrix:
             - papi-tools
             - lcov
             - graphviz
+            - libgoogle-perftools-dev
+            - google-perftools
       env:
         - MATRIX_EVAL="CC=$(which gcc) && CXX=$(which g++) && COVERAGE=1 && BUILD_TYPE=Debug && BUILD_ARGS='--build-libs static --papi --mpip --python --ompt --kokkos --stats --tools --cxx-standard=14'"
     #
@@ -71,6 +75,8 @@ matrix:
             - libpapi-dev
             - papi-tools
             - graphviz
+            - libgoogle-perftools-dev
+            - google-perftools
       env:
         - MATRIX_EVAL="CC=$(which gcc-8) && CXX=$(which g++-8) && BUILD_ARGS='--build-libs static --mpi --papi  --mpip --python --ompt --kokkos --stats --tools --cxx-standard=17'"
     # Clang 5.0
@@ -93,6 +99,8 @@ matrix:
             - libpapi-dev
             - papi-tools
             - graphviz
+            - libgoogle-perftools-dev
+            - google-perftools
       env:
         - MATRIX_EVAL="CC=$(which clang-5.0) && CXX=$(which clang++-5.0) && BUILD_ARGS='--build-libs static --mpi --papi --mpip --python --ompt --kokkos --stats --tools --cxx-standard=14'"
     # Clang 7
@@ -112,8 +120,10 @@ matrix:
             - libpapi-dev
             - papi-tools
             - graphviz
+            - libgoogle-perftools-dev
+            - google-perftools
       env:
-        - MATRIX_EVAL="CC=$(which clang-7) && CXX=$(which clang++-7) && BUILD_ARGS='--build-libs static --caliper --mpi --papi --mpip --python --ompt --kokkos --stats --tools --cxx-standard=17'"
+        - MATRIX_EVAL="CC=$(which clang-7) && CXX=$(which clang++-7) && BUILD_ARGS='--build-libs static --caliper --mpi --papi --mpip --python --ompt --kokkos --stats --tools --cxx-standard=14'"
     # ------------------------------------------------------------------------ #
     #
     #   Python 3.7
@@ -136,6 +146,8 @@ matrix:
             - libpapi-dev
             - papi-tools
             - graphviz
+            - libgoogle-perftools-dev
+            - google-perftools
       env:
         - MATRIX_EVAL="CC=$(which gcc-6) && CXX=$(which g++-6) && BUILD_TYPE=MinSizeRel && BUILD_ARGS='--build-libs shared --mpi --papi --gotcha --mpip --python --ompt --kokkos --stats --tools --cxx-standard=14'"
     # GCC 7
@@ -155,6 +167,8 @@ matrix:
             - libpapi-dev
             - papi-tools
             - graphviz
+            - libgoogle-perftools-dev
+            - google-perftools
       env:
         - MATRIX_EVAL="CC=$(which gcc-7) && CXX=$(which g++-7) && BUILD_ARGS='--build-libs static --mpi --papi --caliper --mpip --python --ompt --kokkos --stats --tools --cxx-standard=14'"
     #
@@ -175,6 +189,8 @@ matrix:
             - libpapi-dev
             - papi-tools
             - graphviz
+            - libgoogle-perftools-dev
+            - google-perftools
       env:
         - MATRIX_EVAL="CC=$(which gcc-8) && CXX=$(which g++-8) && BUILD_ARGS='--build-libs shared --mpi --papi  --mpip --python --ompt --kokkos --stats --tools --cxx-standard=17'"
     # Clang 5.0
@@ -195,6 +211,8 @@ matrix:
             - libpapi-dev
             - papi-tools
             - graphviz
+            - libgoogle-perftools-dev
+            - google-perftools
       env:
         - MATRIX_EVAL="CC=$(which clang-5.0) && CXX=$(which clang++-5.0) && BUILD_ARGS='--build-libs shared --mpi --papi --mpip --python --ompt --kokkos --stats --tools --cxx-standard=14'"
     # Clang 7
@@ -212,8 +230,10 @@ matrix:
             - libpapi-dev
             - papi-tools
             - graphviz
+            - libgoogle-perftools-dev
+            - google-perftools
       env:
-        - MATRIX_EVAL="CC=$(which clang-7) && CXX=$(which clang++-7) && BUILD_ARGS='--build-libs shared --gotcha --caliper --mpi --papi --mpip --python --ompt --kokkos --stats --tools --cxx-standard=17'"
+        - MATRIX_EVAL="CC=$(which clang-7) && CXX=$(which clang++-7) && BUILD_ARGS='--build-libs shared --gotcha --caliper --mpi --papi --mpip --python --ompt --kokkos --stats --tools --cxx-standard=14'"
 
     # ------------------------------------------------------------------------ #
 
@@ -229,7 +249,7 @@ before_install:
 install:
   - eval "${MATRIX_EVAL}"
   - env
-  - conda create -c defaults -c conda-forge -n pyctest python=${TRAVIS_PYTHON_VERSION} pyctest scikit-build cmake numpy matplotlib pillow gperftools
+  - conda create -c defaults -c conda-forge -n pyctest python=${TRAVIS_PYTHON_VERSION} pyctest scikit-build cmake numpy matplotlib pillow
   - source activate pyctest
   - export ARGS="-SF --pyctest-model=Continuous --pyctest-site=Travis --python ${BUILD_ARGS}"
   - if [ -z "${BUILD_TYPE}" ]; then BUILD_TYPE=RelWithDebInfo ; fi
