--- a/.travis.yml
+++ b/.travis.yml
@@ -22,17 +22,13 @@ matrix:
             - gcc-6
             - g++-6
             - build-essential
-            - libopenmpi-dev
-            - openmpi-bin
-            - openmpi-common
-            - libfabric-dev
             - libpapi-dev
             - papi-tools
             - graphviz
             - libgoogle-perftools-dev
             - google-perftools
       env:
-        - MATRIX_EVAL="CC=$(which gcc-6) && CXX=$(which g++-6) && BUILD_TYPE=MinSizeRel && BUILD_ARGS='--papi --mpi --build-libs static --mpip --python --ompt --kokkos --stats --tools --cxx-standard=14'"
+        - MATRIX_EVAL="CC=$(which gcc-6) && CXX=$(which g++-6) && BUILD_TYPE=MinSizeRel && BUILD_ARGS='--papi --build-libs static --python --ompt --kokkos --stats --tools --cxx-standard=14'"
     # GCC 7
     - os: linux
       dist: bionic
@@ -92,17 +88,13 @@ matrix:
             - clang-5.0
             - clang++-5.0
             - build-essential
-            - libopenmpi-dev
-            - openmpi-bin
-            - openmpi-common
-            - libfabric-dev
             - libpapi-dev
             - papi-tools
             - graphviz
             - libgoogle-perftools-dev
             - google-perftools
       env:
-        - MATRIX_EVAL="CC=$(which clang-5.0) && CXX=$(which clang++-5.0) && BUILD_ARGS='--build-libs static --mpi --papi --mpip --python --ompt --kokkos --stats --tools --cxx-standard=14'"
+        - MATRIX_EVAL="CC=$(which clang-5.0) && CXX=$(which clang++-5.0) && BUILD_ARGS='--build-libs static --papi --python --ompt --kokkos --stats --tools --cxx-standard=14'"
     # Clang 7
     - os: linux
       dist: bionic
@@ -254,7 +246,7 @@ install:
   - export ARGS="-SF --pyctest-model=Continuous --pyctest-site=Travis --python ${BUILD_ARGS}"
   - if [ -z "${BUILD_TYPE}" ]; then BUILD_TYPE=RelWithDebInfo ; fi
   - if [ -n "${COVERAGE}" ]; then ARGS="${ARGS} --coverage"; else ARGS="${ARGS} --profile=cpu"; fi
-  - travis_wait 75 python ./pyctest-runner.py ${ARGS} --pyctest-build-type=${BUILD_TYPE} -- -VV
+  - travis_wait 75 python ./pyctest-runner.py ${ARGS} --pyctest-build-type=${BUILD_TYPE} -- -V --output-on-failure
 
 script:
   - eval "${MATRIX_EVAL}"
