Thread indexing + mpi_tests per-thread
- introduced output with thread indexing
- mpi_tests has per-thread tests
- extern fixes
- provide get_component member function to containers
- renamed all usage of real_clock alias to wall_clock

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -131,6 +131,7 @@ if(_BUILD_SHARED_CXX)
         timemory-headers
         timemory-vector
         timemory-external-shared
+        timemory-extern
         ${TIMEMORY_SHARED_GLOBAL_LIBRARIES}
         ${TIMEMORY_SHARED_COMPONENT_LIBRARIES}
         ${TIMEMORY_SHARED_EXTERN_LIBRARIES})
