--- a/source/tests/CMakeLists.txt
+++ b/source/tests/CMakeLists.txt
@@ -9,11 +9,16 @@ if(TIMEMORY_USE_CUDA)
     set(DEVICE_LANGUAGE CUDA)
 endif()
 
+option(TIMEMORY_USE_TESTING_LINK_LIBRARY "Google-tests like to shared or static library" ON)
+mark_as_advanced(TIMEMORY_USE_TESTING_LINK_LIBRARY)
+
 set(_LIBRARY)
-if(TARGET timemory-cxx-shared)
-    set(_LIBRARY timemory-cxx-shared)
-elseif(TARGET timemory-cxx-static)
-    set(_LIBRARY timemory-cxx-static)
+if(TIMEMORY_USE_TESTING_LINK_LIBRARY)
+    if(TARGET timemory-cxx-shared)
+        set(_LIBRARY timemory-cxx-shared)
+    elseif(TARGET timemory-cxx-static)
+        set(_LIBRARY timemory-cxx-static)
+    endif()
 endif()
 
 # add_library(no-store-merge INTERFACE)
