--- a/.travis.yml
+++ b/.travis.yml
@@ -50,7 +50,7 @@ matrix:
             - libgoogle-perftools-dev
             - google-perftools
       env:
-        - MATRIX_EVAL="CC=$(which gcc) && CXX=$(which g++) && COVERAGE=1 && BUILD_TYPE=Debug && BUILD_ARGS='--build-libs static --papi --mpip --python --ompt --kokkos --stats --tools --cxx-standard=14'"
+        - MATRIX_EVAL="CC=$(which gcc) && CXX=$(which g++) && BUILD_TYPE=Debug && BUILD_ARGS='--build-libs static --papi --mpip --python --ompt --kokkos --stats --tools --cxx-standard=14'"
     #
     # GCC 8
     - os: linux
@@ -162,7 +162,7 @@ matrix:
             - libgoogle-perftools-dev
             - google-perftools
       env:
-        - MATRIX_EVAL="CC=$(which gcc-7) && CXX=$(which g++-7) && BUILD_ARGS='--build-libs static --mpi --papi --caliper --mpip --python --ompt --kokkos --stats --tools --cxx-standard=14'"
+        - MATRIX_EVAL="CC=$(which gcc-7) && CXX=$(which g++-7) && COVERAGE=1 && BUILD_ARGS='--build-libs static --mpi --papi --caliper --mpip --python --ompt --kokkos --stats --tools --cxx-standard=14'"
     #
     # GCC 8
     - os: linux
@@ -206,7 +206,7 @@ matrix:
             - libgoogle-perftools-dev
             - google-perftools
       env:
-        - MATRIX_EVAL="CC=$(which clang-5.0) && CXX=$(which clang++-5.0) && BUILD_ARGS='--build-libs shared --mpi --papi --mpip --python --ompt --kokkos --stats --tools --cxx-standard=14'"
+        - MATRIX_EVAL="CC=$(which clang-5.0) && CXX=$(which clang++-5.0) && BUILD_ARGS='--build-libs shared --mpi --papi --mpip --python --ompt --kokkos --stats --tools --cxx-standard=17'"
     # Clang 7
     - os: linux
       dist: bionic
